[project]
name = "voyage"
version = "0.1.0"
description = "Collection of tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
 "pytest>=8.3.5",
 "ruff>=0.11.6",
]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"

[tool.ruff.format]
indent-style = "space"
docstring-code-format = true
